# ioExamples

./: .gitignore  README.md
C++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ioExample.cpp
Python/: HandlingHDF5.ipynb  HandlingVTK.ipynb  README.md  test.h5
Python/.ipynb_checkpoints/: HandlingHDF5-checkpoint.ipynb  HandlingVTK-checkpoint.ipynb
Python/data/: grid_log3.vtk  grid_log3.vtu
